# hobby

./: README.md
backend/: .env.example  README.md  config.py  database.py  exceptions.py  main.py  pyproject.toml  requirements.txt
backend/models/: user.py
backend/routers/: __init__.py  graph.py  users.py
backend/schemas/: __init__.py  user.py
backend/services/: __init__.py  user_service.py
frontend/: .env  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: CustomNode.tsx  EditUserModal.tsx  GraphCanvas.tsx  HobbyManagement.tsx  Toast.tsx  ToastContainer.tsx  UserManagement.tsx
frontend/src/hooks/: useToast.ts
frontend/src/services/: api.ts
frontend/src/styles/: App.css  CustomNode.css  EditUserModal.css  GraphCanvas.css  HobbyManagement.css  Toast.css  UserManagement.css
frontend/src/types/: index.ts  nodes.ts
